--- a/pages/installation-guide.html
+++ b/pages/installation-guide.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gu&iacute;a de Instalaci&oacute;n</title>
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    
+    <div class="navbar">
+        <a href="../index.html">Inicio</a>
+        <a class="active" href="installation-guide.html">Instalaci&oacute;n</a>
+        <a href="architecture-guide.html">Arquitectura</a>
+        <a href="rest-guide.html">API REST</a>
+        <a href="mobile-guide.html">Mobile</a>
+        <a href="backoffice-guide.html">Backoffice</a>
+    </div>
 </body>
 </html>
