--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fiuber Documentaci&oacute;n</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <div class="navbar">
+        <a class="active" href="index.html">Inicio</a>
+        <a href="pages/installation-guide.html">Instalaci&oacute;n</a>
+        <a href="pages/architecture-guide.html">Arquitectura</a>
+        <a href="pages/rest-guide.html">API REST</a>
+        <a href="pages/mobile-guide.html">Mobile</a>
+        <a href="pages/backoffice-guide.html">Backoffice</a>
+    </div>
 </body>
 </html>
