--- a/pages/mobile-guide.html
+++ b/pages/mobile-guide.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gu&iacute;a Mobile</title>
     <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="navbar">
@@ -15,6 +18,11 @@
         <a href="rest-guide.html">API REST</a>
         <a class="active" href="mobile-guide.html">Mobile</a>
         <a href="backoffice-guide.html">Backoffice</a>
+    </div>
+    <div class="container-text">
+        <h1 class="title">Gu&iacute;a de Usuario</h1>
+        <h2 class="subtitle">Fiuber Mobile</h2>
+        <p class="text"></p>
     </div>
 </body>
 </html>
