--- a/pages/rest-guide.html
+++ b/pages/rest-guide.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API REST</title>
     <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="navbar">
@@ -15,6 +18,10 @@
         <a class="active" href="rest-guide.html">API REST</a>
         <a href="mobile-guide.html">Mobile</a>
         <a href="backoffice-guide.html">Backoffice</a>
+    </div>
+    <div class="container-text">
+        <h1 class="title">Especificaci&oacute;n de API REST</h1>
+        <p class="text"></p>
     </div>
 </body>
 </html>
