--- a/pages/mobile-guide.html
+++ b/pages/mobile-guide.html
@@ -48,15 +48,49 @@
             extranjera que permita extraer los fondos. Si el email ya existe, no
             se podrá crear la cuenta
           </p>
+          <div class="img-container">
+            <img src="../img/register-rider.jpeg" alt="Registro pasajero" />
+            <img src="../img/register-rider2.jpeg" alt="Registro pasajero 2" />
+          </div>
+          <p class="text">En caso de ser conductor el registro es:</p>
+          <div class="img-container">
+            <img src="../img/register-driver.jpeg" alt="Registro conductor" />
+            <img
+              src="../img/register-driver2.jpeg"
+              alt="Registro conductor 2"
+            />
+          </div>
           <p class="text">
             Otra opci&oacute;n es registrarse con una cuenta de Google, en cuyo
             caso se necesitar&aacute; ingresar un dni y un tel&eacute;fono en
             caso de ser pasajero; dni, tel&eacute;fono, patente y vehiculo en
             caso de ser conductor.
           </p>
-          <div class="img-container-flex">
-            <img src="../img/register-rider.jpeg" alt="Registro" />
-            <img src="../img/register-rider2.jpeg" alt="Registro" />
+          <p class="text">
+            Primero se deberá permitir el acceso a la aplicaci&oacute;n:
+          </p>
+          <div class="img-container">
+            <img src="../img/google.jpeg" alt="Registro con google paso 1" />
+          </div>
+          <p class="text">
+            Luego se deberá elegir la cuenta de Google a utilizar:
+          </p>
+          <div class="img-container">
+            <img src="../img/google2.jpeg" alt="Registro con google paso 2" />
+          </div>
+          <p class="text">
+            Y finalmente se deber&aacute;n ingresar los datos faltantes
+            dependiendo el rol elegido:
+          </p>
+          <div class="img-container">
+            <img
+              src="../img/complete-register-rider.jpeg"
+              alt="Completar registro pasajero"
+            />
+            <img
+              src="../img/complete-register-driver.jpeg"
+              alt="Completar registro conductor"
+            />
           </div>
         </section>
         <section>
@@ -91,6 +125,82 @@
           </p>
           <div class="img-container">
             <img src="../img/configuracion-driver.jpeg" alt="Opciones" />
+          </div>
+        </section>
+        <section>
+          <p class="section-title">Perfil</p>
+          <p class="text">
+            En el perfil se podr&aacute; ver la informaci&oacute;n del usuario,
+            en el caso del conductor, tambi&eacute;n se podr&aacute; ver y
+            editar la informaci&oacute;n del veh&iacute;culo y la patente.
+          </p>
+          <div class="img-container">
+            <img src="../img/perfil-rider.jpeg" alt="Perfil pasajero" />
+            <img
+              src="../img/editar-perfil-rider.jpeg"
+              alt="Editar perfil pasajero"
+            />
+          </div>
+          <p class="text">
+            En el caso del conductor, tambi&eacute;n se podr&aacute; ver la
+            informaci&oacute;n del vehiculo, patente y billetera externa.
+          </p>
+          <div class="img-container">
+            <img src="../img/perfil-driver.jpeg" alt="Perfil conductor" />
+            <img src="../img/perfil-driver-2.jpeg" alt="Perfil conductor" />
+            <img
+              src="../img/editar-perfil-driver.jpeg"
+              alt="Editar perfil conductor"
+            />
+          </div>
+        </section>
+        <section>
+          <p class="section-title">Cambio de contrase&ntilde;a</p>
+          <p class="text">
+            Para cambiar la contrase&ntilde;a se deber&aacute; ingresar la
+            contrase&ntilde;a actual, la nueva y repetirla para evitar errores
+            en la misma.
+          </p>
+          <div class="img-container">
+            <img
+              src="../img/cambiar-password.jpeg"
+              alt="Cambiar contrase&ntilde;a"
+            />
+          </div>
+        </section>
+        <section>
+          <p class="section-title">Retiro de fondos</p>
+          <p class="text">
+            Para retirar los fondos se deber&aacute; ingresar la billetera
+            externa previamente y la cantidad de dinero a retirar. En caso de
+            que el dinero que se quiera retirar supere el monto disponible + gas
+            price, se mostrar&aacute; un mensaje de error. En la misma pantalla
+            se mostrar&aacute; el balance actual.
+          </p>
+          <div class="img-container">
+            <img src="../img/withdrawal.jpeg" alt="Retiro de fondos" />
+          </div>
+        </section>
+        <section>
+          <p class="section-title">Logout</p>
+          <p class="text">
+            Al presionar el bot&oacute;n para salir de la cuenta, se
+            abrir&aacute; una ventana de di&aacute;logo en la cual el usuario
+            podr&aacute; cancelar la operaci&oacute;n o proceder con la misma.
+          </p>
+          <div class="img-container">
+            <img src="../img/logout.jpeg" alt="Salir" />
+          </div>
+        </section>
+        <section>
+          <p class="section-title">Eliminar cuenta</p>
+          <p class="text">
+            Al presionar el bot&oacute;n para eliminar la cuenta, se
+            abrir&aacute; una ventana de di&aacute;logo en la cual el usuario
+            podr&aacute; cancelar la operaci&oacute;n o proceder con la misma.
+          </p>
+          <div class="img-container">
+            <img src="../img/eliminar-cuenta.jpeg" alt="Eliminar cuenta" />
           </div>
         </section>
       </article>
