Errores de tipeo

--- a/pages/backoffice-guide.html
+++ b/pages/backoffice-guide.html
@@ -27,7 +27,7 @@
             Al entrar a la p&aacute;gina, lo primero que se ve es la pantalla de Log In. Los administradores entran al sistema ingresando
             e-mail y contraseña. No se da la opci&oacute;n de registrarse, porque las cuentas de administradores solo pueden ser creadas
             por otros administradores. Cuando se inicia sesi&oacute;n, se redirige a la pantalla de Rider Management, y se puede utilizar
-            la navbar en la aprte superior de la pantalla para acceder a las diferentes partes de la p&aacute;gina, las cuales se ir&aacute;n 
+            la navbar en la parte superior de la pantalla para acceder a las diferentes partes de la p&aacute;gina, las cuales se ir&aacute;n 
             detallando a continuaci&oacute;n.
         </p>
         <h3 class="section">Rider Management</h3>
@@ -53,19 +53,19 @@
         <h5 class="text">Transaction History</h5>
         <p class="text">
             El Transaction History lista todas las transacciones vinculadas a la wallet del usuario, tanto aquellas en las que recibe dinero 
-            como en las que recibe. Adem&aacute;s se cuentan con una serie de filtros que pueden utilizarse para elegir qu&eacute; transacciones 
+            como en las que lo env&iacute;a. Adem&aacute;s se cuenta con una serie de filtros que pueden utilizarse para elegir qu&eacute; transacciones 
             mostrar.
         </p>
         <h5 class="text">Deposit Funds</h5>
         <p class="text">
             Desde esta opci&oacute;n se permite depositarle ETH a la wallet del usuario, utilizando los fondos disponibles en la wallet de
-            administradores. El gas price lo pagan los administradores, por lo que hay que tenerlo en cuenta para ver si se cuentan con los 
-            fondos suficientes como para realizar la transacci&oacute;n.
+            administradores. El gas price lo pagan los administradores, por lo que hay que tenerlo en cuenta para ver si se tiene fondos 
+            suficientes como para realizar la transacci&oacute;n.
         </p>
         <h4 class="subsection">Block / Unblock</h4>
         <p class="text">
             Con el bot&oacute;n de block / unblock, se puede bloquear el acceso a la aplicaci&oacute;n por parte del usuario. Cuando este intente 
-            iniciar sesi&oacute;n, se le dir&aacute; que su usuario o contraseña son incorrectos, y tambi&eacute;n se le impedir&aacute; crear otra
+            iniciar sesi&oacute;n, se le dir&aacute; que su e-mail o contraseña son incorrectos, y tambi&eacute;n se le impedir&aacute; crear otra
             cuenta con ese e-mail. 
         </p>
         <h3 class="section">Driver Management</h3>
@@ -83,7 +83,7 @@
         <h4 class="subsection">Settings</h4>
         <p class="text">
             En la pestaña de settings, se pueden ajustar los par&aacute;metros que se usan en la f&oacute;rmula de c&aacute;lculo de precios de 
-            lso viajes, que consiste en un precio base a fijar por el administrador, y diferentes recargos por distancia del recorrido y duraci&oacute;n 
+            los viajes, que consiste en un precio base a fijar por el administrador, y diferentes recargos por distancia del recorrido y duraci&oacute;n 
             estimada del mismo. A esto se le suma otro recargo que depende de la demanda actual de la aplicaci&oacute;n, considerando la diferencia entre 
             entre pasajeros buscando un viaje y choferes disponibles.
         </p>
