Documentacion del backoffice terminada

--- a/pages/mobile-guide.html
+++ b/pages/mobile-guide.html
@@ -34,7 +34,7 @@
             conductor.
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/choose-role.jpeg" alt="Elegir rol" />
+            <img class="img-mobile" src="../img/mobile/choose-role.jpeg" alt="Elegir rol" />
           </div>
         </section>
         <section>
@@ -49,14 +49,14 @@
             se podrá crear la cuenta
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/register-rider.jpeg" alt="Registro pasajero" />
-            <img class="img-mobile" src="../img/register-rider2.jpeg" alt="Registro pasajero 2" />
+            <img class="img-mobile" src="../img/mobile/register-rider.jpeg" alt="Registro pasajero" />
+            <img class="img-mobile" src="../img/mobile/register-rider2.jpeg" alt="Registro pasajero 2" />
           </div>
           <p class="text">En caso de ser conductor el registro es:</p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/register-driver.jpeg" alt="Registro conductor" />
+            <img class="img-mobile" src="../img/mobile/register-driver.jpeg" alt="Registro conductor" />
             <img class="img-mobile"
-              src="../img/register-driver2.jpeg"
+              src="../img/mobile/register-driver2.jpeg"
               alt="Registro conductor 2"
             />
           </div>
@@ -70,13 +70,13 @@
             Primero se deberá permitir el acceso a la aplicaci&oacute;n:
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/google.jpeg" alt="Registro con google paso 1" />
+            <img class="img-mobile" src="../img/mobile/google.jpeg" alt="Registro con google paso 1" />
           </div>
           <p class="text">
             Luego se deberá elegir la cuenta de Google a utilizar:
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/google2.jpeg" alt="Registro con google paso 2" />
+            <img class="img-mobile" src="../img/mobile/google2.jpeg" alt="Registro con google paso 2" />
           </div>
           <p class="text">
             Y finalmente se deber&aacute;n ingresar los datos faltantes
@@ -84,11 +84,11 @@
           </p>
           <div class="img-container">
             <img class="img-mobile"
-              src="../img/complete-register-rider.jpeg"
+              src="../img/mobile/complete-register-rider.jpeg"
               alt="Completar registro pasajero"
             />
             <img class="img-mobile"
-              src="../img/complete-register-driver.jpeg"
+              src="../img/mobile/complete-register-driver.jpeg"
               alt="Completar registro conductor"
             />
           </div>
@@ -101,7 +101,7 @@
             cual se deberá ingresar email y contrase&ntilde;a.
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/login.jpeg" alt="Login" />
+            <img class="img-mobile" src="../img/mobile/login.jpeg" alt="Login" />
           </div>
         </section>
         <section>
@@ -117,14 +117,14 @@
             eliminar la cuenta.
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/configuracion-rider.jpeg" alt="Opciones" />
+            <img class="img-mobile" src="../img/mobile/configuracion-rider.jpeg" alt="Opciones" />
           </div>
           <p class="text">
             Adem&aacute;s en el caso del conductor, se podrá realizar el retiro
             de fondos a una billetera externa.
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/configuracion-driver.jpeg" alt="Opciones" />
+            <img class="img-mobile" src="../img/mobile/configuracion-driver.jpeg" alt="Opciones" />
           </div>
         </section>
         <section>
@@ -135,9 +135,9 @@
             editar la informaci&oacute;n del veh&iacute;culo y la patente.
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/perfil-rider.jpeg" alt="Perfil pasajero" />
+            <img class="img-mobile" src="../img/mobile/perfil-rider.jpeg" alt="Perfil pasajero" />
             <img class="img-mobile"
-              src="../img/editar-perfil-rider.jpeg"
+              src="../img/mobile/editar-perfil-rider.jpeg"
               alt="Editar perfil pasajero"
             />
           </div>
@@ -146,10 +146,10 @@
             informaci&oacute;n del vehiculo, patente y billetera externa.
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/perfil-driver.jpeg" alt="Perfil conductor" />
-            <img class="img-mobile" src="../img/perfil-driver-2.jpeg" alt="Perfil conductor" />
+            <img class="img-mobile" src="../img/mobile/perfil-driver.jpeg" alt="Perfil conductor" />
+            <img class="img-mobile" src="../img/mobile/perfil-driver-2.jpeg" alt="Perfil conductor" />
             <img class="img-mobile"
-              src="../img/editar-perfil-driver.jpeg"
+              src="../img/mobile/editar-perfil-driver.jpeg"
               alt="Editar perfil conductor"
             />
           </div>
@@ -163,7 +163,7 @@
           </p>
           <div class="img-container">
             <img class="img-mobile"
-              src="../img/cambiar-password.jpeg"
+              src="../img/mobile/cambiar-password.jpeg"
               alt="Cambiar contrase&ntilde;a"
             />
           </div>
@@ -178,7 +178,7 @@
             se mostrar&aacute; el balance actual.
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/withdrawal.jpeg" alt="Retiro de fondos" />
+            <img class="img-mobile" src="../img/mobile/withdrawal.jpeg" alt="Retiro de fondos" />
           </div>
         </section>
         <section>
@@ -189,7 +189,7 @@
             podr&aacute; cancelar la operaci&oacute;n o proceder con la misma.
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/logout.jpeg" alt="Salir" />
+            <img class="img-mobile" src="../img/mobile/logout.jpeg" alt="Salir" />
           </div>
         </section>
         <section>
@@ -200,7 +200,7 @@
             podr&aacute; cancelar la operaci&oacute;n o proceder con la misma.
           </p>
           <div class="img-container">
-            <img class="img-mobile" src="../img/eliminar-cuenta.jpeg" alt="Eliminar cuenta" />
+            <img class="img-mobile" src="../img/mobile/eliminar-cuenta.jpeg" alt="Eliminar cuenta" />
           </div>
         </section>
       </article>
