--- a/pages/backoffice-guide.html
+++ b/pages/backoffice-guide.html
@@ -25,8 +25,8 @@
         <h3  class="section-title">Log In</h3>
         <p class="text">
             Al entrar a la p&aacute;gina, lo primero que se ve es la pantalla de Log In. Los administradores entran al sistema ingresando
-            e-mail y contraseña. No se da la opci&oacute;n de registrarse, porque las cuentas de administradores solo pueden ser creadas
-            por otros administradores. Cuando se inicia sesi&oacute;n, se redirige a la pantalla de Rider Management, y se puede utilizar
+            e-mail y contraseña. No se da la opci&oacute;n de registrarse, porque las cuentas de administradores <a href="#admin_register">solo pueden ser creadas
+            por otros administradores</a>. Cuando se inicia sesi&oacute;n, se redirige a la pantalla de Rider Management, y se puede utilizar
             la navbar en la parte superior de la pantalla para acceder a las diferentes partes de la p&aacute;gina, las cuales se ir&aacute;n 
             detallando a continuaci&oacute;n.
         </p>
@@ -302,10 +302,10 @@
         <div class="img-container">
             <img class="img-web" src="../img/backoffice/transaction-metrics-4.png" alt="withdraws histograma">
         </div>
-        <h3 class="section-title">Admin Register</h3>
+        <h3 id="admin_register" class="section-title">Admin Register</h3>
         <p class="text">
             Esta opci&oacute;n solo se encuentra disponible para los administradores con permisos para registrar nuevas cuentas. Permite la 
-            creaci&oacute;n de un nuevo administrador, ingresando un e-mail y una contraseña. Adem&aacute;s permite determinar el nivel de 
+            creaci&oacute;n de un nuevo administrador, ingresando un e-mail y una contraseña. Adem&aacute;s se puede determinar el nivel de 
             permisos de la cuenta. La diferencia entre el nivel 1 y el 2 es que el primero no es capaz de registrar nuevos administradores, 
             y el 2 s&iacute; lo permite. 
         </p>
