--- a/pages/mobile-guide.html
+++ b/pages/mobile-guide.html
@@ -209,8 +209,8 @@
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/mylocations.jpeg" alt="Inicio Rider" />
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/mylocationsnew.jpeg" alt="Insert place Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/mylocations.jpeg" alt="Insertar location" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/mylocationsnew.jpeg" alt="Introducir location" />
 
         </div>
 
@@ -222,7 +222,7 @@
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/preriderider.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/preriderider.jpeg" alt="Confirm page" />
 
         </div>
 
@@ -233,7 +233,7 @@
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/waitingfordriver.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/waitingfordriver.jpeg" alt="Espera" />
 
         </div>
 
@@ -243,7 +243,7 @@
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/durinriderider.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/durinriderider.jpeg" alt="Info viaje " />
 
         </div>
 
@@ -254,8 +254,8 @@
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/infodriver.jpeg" alt="Inicio Rider" />
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/reviewsrider.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/infodriver.jpeg" alt="Info driver" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/reviewsrider.jpeg" alt="Reviews Driver" />
 
         </div>
 
@@ -265,7 +265,7 @@
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/reportdriver.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/reportdriver.jpeg" alt="Reporte" />
 
         </div>
 
@@ -276,8 +276,8 @@
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/finviajerider.jpeg" alt="Inicio Rider" />
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/finviajerider2.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/finviajerider.jpeg" alt="Fin viaje rider" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/finviajerider2.jpeg" alt="Payment sent" />
 
         </div>
 
@@ -285,7 +285,7 @@
           Si así lo desea, puede dejar una reseña sobre su viaje y su conductor presionando el botón “Leave a Rewiew”.
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/raterider.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/raterider.jpeg" alt="Rate driver" />
 
         </div>
 
@@ -293,7 +293,7 @@
           Finalmente, para volver al inicio, presione el botón “Back Home”.
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/finviajerider.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-pasajero/finviajerider.jpeg" alt="Fin Viaje Rider" />
 
         </div>
 
@@ -302,72 +302,50 @@
       <section>
         <h3 class="section-title">Viaje Chofer</h3>
         <p class="text">
-          Para comenzar a viajar, el usuario debe seleccionar el lugar de origen donde comenzará el viaje y el lugar de
-          destino.
-          Esto se puede hacer con los buscadores de localidades de la pantalla Home, en ellos puede introducir tanto
-          direcciones como nombres de lugares.
+          Para buscar un nuevo viaje, presione el botón “Start Driving”, se le redirigirá a la pantalla de espera e
+          inmediatamente la aplicación lo conectara con el viaje de un pasajero.
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/homerider.jpeg" alt="Inicio Rider" />
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/insertplace.jpeg" alt="Insert place Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-chofer/homedriver.jpeg" alt="Inicio Driver" />
+          <img class="img-mobile" src="../img/mobile/ride-chofer/waitingrides.jpeg" alt="Espera" />
 
         </div>
 
         <p class="text">
-          Si viaja con frecuencia a cierto lugar, diríjase a la sección “My Locations”, allí puede guardarlo con un
-          nombre personalizado y con su dirección. La próxima vez que use los buscadores de localidades simplemente
-          deberá seleccionarlo por su nombre para viajar o partir desde allí.
+          Cuando se encuentre un viaje, verá la solicitud de viaje en su pantalla, la misma contiene información como
+          precio, destino, duración, nombre y calificación del pasajero.
+          Usted puede decidir si aceptar la misma o no.
+
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/mylocations.jpeg" alt="Inicio Rider" />
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/mylocationsnew.jpeg" alt="Insert place Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-chofer/newrequest.jpeg" alt="Nueva solicitud viaje" />
 
         </div>
 
         <p class="text">
-          Una vez seleccionados los puntos de origen y destino, se le dirigirá a la sección de previaje, donde podrá
-          visualizar la ruta a seguir junto con el precio del viaje y el método de pago que está usando.
-          Es en este momento donde debe confirmar el viaje para comenzar la búsqueda de chofer.
+          Cuando acepte un viaje, vera el recorrido el tiempo real e información del viaje, tales como tiempo de
+          llegada, dirección de destino y precio.
 
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/preriderider.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-chofer/duringridedriver.jpeg" alt="During Ride" />
 
         </div>
 
         <p class="text">
+          Además, si presiona el botón “Rider” podrá ver información sobre su pasajero, tales como nombre, estrellas y
+          cantidad de viajes realizados. Al presionar el botón “Rider Reviews” podrá ver todas las reseñas que han
+          enviado choferes anteriores sobre el pasajero.
 
-          Luego, se le abrirá la pantalla de espera mientras un chofer acepta su viaje.
-
-
-        </p>
-        <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/waitingfordriver.jpeg" alt="Inicio Rider" />
-
-        </div>
-
-        <p class="text">
-          Cuando el chofer acepte su viaje, podrá ver el recorrido en tiempo real, e información de su viaje, tales como
-          tiempo de llegada, dirección de destino y precio.
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/durinriderider.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-chofer/inforider.jpeg" alt="Info rider" />
+          <img class="img-mobile" src="../img/mobile/ride-chofer/reviewsrider.jpeg" alt="Review Rider" />
 
-        </div>
-
-        <p class="text">
-          Además, si presiona el botón “Driver” podrá ver información sobre su chofer, tales como nombre, estrellas,
-          vehículo, patente y cantidad de viajes realizados. Al presionar el botón “Driver Reviews” podrá ver todas las
-          reseñas que han enviado pasajeros anteriores sobre el chofer.
-
-        </p>
-        <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/infodriver.jpeg" alt="Inicio Rider" />
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/reviewsrider.jpeg" alt="Inicio Rider" />
 
         </div>
 
@@ -377,37 +355,40 @@
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/reportdriver.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-chofer/reportrider.jpeg" alt="Reporte" />
 
         </div>
 
         <p class="text">
           Una vez llegado a destino, se lo llevará a la pantalla de PostViaje, donde se le informará que ha llegado a
-          destino. Una vez que el pago del precio del viaje se confirme, también se le informará por pantalla mediante
-          una alerta verde.
+          destino.
 
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/finviajerider.jpeg" alt="Inicio Rider" />
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/finviajerider2.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-chofer/endride.jpeg" alt="Fin viaje driver" />
 
         </div>
 
         <p class="text">
-          Si así lo desea, puede dejar una reseña sobre su viaje y su conductor presionando el botón “Leave a Rewiew”.
+          Si así lo desea, puede dejar una reseña sobre su viaje y su pasajero presionando el botón “Leave a Rewiew”.
+
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/raterider.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-chofer/ratedriver.jpeg" alt="Review Rider" />
 
         </div>
 
         <p class="text">
           Finalmente, para volver al inicio, presione el botón “Back Home”.
+
         </p>
         <div class="img-container">
-          <img class="img-mobile" src="../img/mobile/ride-pasajero/finviajerider.jpeg" alt="Inicio Rider" />
+          <img class="img-mobile" src="../img/mobile/ride-chofer/endride.jpeg" alt="Fin viaje driver" />
+
 
         </div>
+
+
 
       </section>
     </article>
