agrego docu backend

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <div class="navbar">
         <a class="active" href="index.html">Inicio</a>
-        <a href="pages/installation-guide.html">Instalaci&oacute;n</a>
-        <a href="pages/architecture-guide.html">Arquitectura</a>
-        <a href="pages/rest-guide.html">API REST</a>
+        <!-- <a href="pages/installation-guide.html">Instalaci&oacute;n</a> -->
+        <!-- <a href="pages/architecture-guide.html">Arquitectura</a> -->
+        <!-- <a href="pages/rest-guide.html">API REST</a> -->
+        <a href="pages/backend-doc.html">Backend</a>
         <a href="pages/mobile-guide.html">Mobile</a>
         <a href="pages/backoffice-guide.html">Backoffice</a>
     </div>
