--- a/pages/backoffice-guide.html
+++ b/pages/backoffice-guide.html
@@ -13,9 +13,10 @@
 <body>
     <div class="navbar">
         <a href="../index.html">Inicio</a>
-        <a href="installation-guide.html">Instalaci&oacute;n</a>
-        <a href="architecture-guide.html">Arquitectura</a>
-        <a href="rest-guide.html">API REST</a>
+        <!-- <a href="installation-guide.html">Instalaci&oacute;n</a> -->
+        <!-- <a href="architecture-guide.html">Arquitectura</a> -->
+        <!-- <a href="rest-guide.html">API REST</a> -->
+        <a href="backend-doc.html">Backend</a>
         <a href="mobile-guide.html">Mobile</a>
         <a class="active" href="backoffice-guide.html">Backoffice</a>
     </div>
