--- a/pages/mobile-guide.html
+++ b/pages/mobile-guide.html
@@ -15,9 +15,10 @@
 <body>
   <nav class="navbar">
     <a href="../index.html">Inicio</a>
-    <a href="installation-guide.html">Instalaci&oacute;n</a>
-    <a href="architecture-guide.html">Arquitectura</a>
-    <a href="rest-guide.html">API REST</a>
+    <!-- <a href="installation-guide.html">Instalaci&oacute;n</a> -->
+    <!-- <a href="architecture-guide.html">Arquitectura</a> -->
+    <!-- <a href="rest-guide.html">API REST</a> -->
+    <a href="backend-doc.html">Backend</a>
     <a class="active" href="mobile-guide.html">Mobile</a>
     <a href="backoffice-guide.html">Backoffice</a>
   </nav>
