agrego foto inicio

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Fiuber Documentaci&oacute;n</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
     <div class="navbar">
         <a class="active" href="index.html">Inicio</a>
@@ -17,5 +19,10 @@
         <a href="pages/mobile-guide.html">Mobile</a>
         <a href="pages/backoffice-guide.html">Backoffice</a>
     </div>
+
+    <div class="img-container">
+        <img class="img-web" src="./img/inicio/fiuber-docs-portada.jpg">
+    </div>
 </body>
+
 </html>
